# data-challenge

./: .gitignore  Dockerfile  docker-compose.yml
pipeline/: Dockerfile  README.md  main.py  pyproject.toml
pipeline/assets/ddl/: raw_apfel_subscriptions.sql  raw_exchange_rates.sql  raw_fenster_subscriptions.sql
pipeline/assets/loading/: generic_copy.sql
pipeline/assets/medallion/: count_dropped_records.sql
pipeline/assets/medallion/bronze/: bronze_apfel_subscriptions.sql  bronze_exchange_rates.sql  bronze_fenster_subscriptions.sql  bronze_subscriptions.sql
pipeline/assets/medallion/gold/: gold_cfo_report.sql
pipeline/notebooks/: eda.ipynb
pipeline/src/: extraction_load.py  transformation.py
